# EagleEye

./: CMakeLists.txt
cmake/: Doxyfile.cmake  Doxyfile.cmake.bak  Doxyfile.cmake~  FindOpenCV.cmake  FindOpenCV.cmake~
includes/: cvblob.h
includes/cuda/: cudaTest.h
src/: CMakeLists.txt  main.cpp
src/algorithms/: codebook.cpp  codebook.h  edge.cpp  edge.h  ialgorithmmodel.h  mhi.cpp  mhi.h  registration.cpp  tracker.cpp  tracker.h
src/core/: cvframesource.cpp  cvframesource.h  iframesource.h
src/cuda/: CMakeLists.txt  cudaTest.cu
src/gui/: mainwindow.cpp  mainwindow.h  movieviewer.cpp  movieviewer.h  tabdialog.cpp  tabdialog.h  viewer.cpp  viewer.h
src/tools/: .mycuda.cu.swp  CMakeLists.txt  cudaTest.cpp  mycuda.cu
