PROJECT(EagleEye)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_BUILD_TYPE Release)
SET(VERSION_MAJOR "0" )
SET(VERSION_MINOR "0" )
SET(VERSION_PATCH "4" )

#ENABLE_TESTING(true)

# search CMake Macros where FindOpenCV.cmake store
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE( Qt4 REQUIRED )
#FIND_PACKAGE( GTest REQUIRED )
FIND_PACKAGE(CUDA)

# set output path
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/libs)
SET(RUNTIME_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

INCLUDE_DIRECTORIES(includes)
LINK_DIRECTORIES(libs)
# add sub directory 
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(3rdparty)

